# pybamm_pnm

./: .gitignore  pyproject.toml  setup.py  setup_old.py
docs/examples/: 02 Network from an image copy.ipynb  03 Running a simulation bug.ipynb  03 Running a simulation.ipynb  03.1 Running a simulation mass loading.ipynb  04 Running a multi step simulation.ipynb  prepare_images.ipynb
ecm/: __funcs__.py  __liionsolve__.py  __postprocess__.py  autofit_jellyroll.py  runfuns.py
jellybamm/: __funcs__.py  __init__.py  __liionsolve__.py  funcs.py  liionsolve.py  topology.py
src/ecm/: __funcs__.py  __init__.py  __postprocess__.py  __topology__.py  autofit_jellyroll.py  runfuns.py
tests/unit/: test_funcs.py
