[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ecm"
description = "Equivalent Circuit Model for battery modelling using PyBaMM"
version = "0.0.3"
authors = [
    {name = "Tom Tranter", email = "t.g.tranter@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numba",
    "liionpack",
    "pybamm",
    "openpnm==2.8.2",
    "ffmpeg-python",
    "ipywidgets"
]

[project.urls]
Documentation = "https://ecm.readthedocs.io/en/latest/"
Source = "https://github.com/TomTranter/pybamm_pnm"
Tracker = "https://github.com/TomTranter/pybamm_pnm/issues"

#[tool.setuptools_scm]
#write_to = "ecm/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ecm", "ecm.*"]